@startuml AuthenticationService
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classFontName Trebuchet MS
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #585858
skinparam classArrowColor #585858
skinparam wrapWidth 400
skinparam RoundCorner 0
skinparam DefaultFontName Trebuchet MS
skinparam DefaultFontSize 16
skinparam ClassFontSize 16
skinparam TitleFontSize 20
skinparam ClassAttributeFontSize 12
skinparam ClassStereotypeFontSize 10
skinparam ArrowFontSize 10
skinparam Dpi 300
skinparam svgAntiAlias true
skinparam Linetype ortho
skinparam Nodesep 50
skinparam ranksep 75
skinparam groupInheritance 2
skinparam packageStyle Rectangle

left to right direction

package Services <<Rectangle>> {
    class AuthenticationService implements IAuthenticationService
    interface IAuthenticationService
}

AuthenticationService o-- Classes.Data.UserRepository
AuthenticationService ..> Classes.Utilities.SecurityUtilities

hide members
@enduml